# syndicate

./: .gitignore  Cargo.toml  credentials.toml.example
src/: credential.rs  dev_to.rs  hacker_news.rs  header.html  main.rs  mastodon.rs  medium.rs  post.rs  sendy.rs  signature.html  signature.txt  twitter.rs
