[package]
name = "syndicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
atom_syndication = "*"
html2text = "0.6.0"
open = "5.0.0"
resvg = "0.36.0"
tiny-skia = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
isolang = "2.4.0"
tokio-util = { version = "0.6", features = ["codec"] }
oauth2 = "4.4.2"
mdka = "1.2.1"

[dependencies.mastodon-async]
version = "1.3.1"
features = ["toml", "mt"]